# dio.me-store_api

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RELATORIO_CONTROLLERS_FASTAPI.md  RELATORIO_FINAL.md  TDD-PROJECT_STORE_API_COMPLETO.md  check_challenges.py  debug_create.py  docker-compose.yml  populate_store.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
store/: __init__.py  main.py  routers.py
store/controllers/: product.py
store/core/: config.py
store/db/: mongo.py
store/exceptions/: base.py
store/models/: base.py  product.py
store/schemas/: __init__.py  base.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py  test_integration.py
tests/controllers/: test_integration_advanced.py  test_load_stress.py  test_product.py  test_security.py
tests/schemas/: test_product.py
tests/usecases/: test_exceptions.py  test_product.py  test_store_products.py
